@@ -31,6 +31,8 @@ Version 1.0.1 to be released
 - Enhancement: Added CController::init() (Qiang)
 - Enhancement: Changed Yii::createComponent() to support property initialization (Qiang)
 - Enhancement: Optimized the framework (Qiang)
+- Enhancement: Added CSort to support multisort (Qiang)
+- Enhancement: Refactored the code generated by the crud command (Qiang)
 
 Version 1.0 December 3, 2008
 ----------------------------
